--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
   },
   "require": {
     "php": ">=7.0.0",
-    "jarzon/prim": "@dev",
-    "jarzon/primutilities": "@dev",
+    "jarzon/prim": "0.5.*",
+    "jarzon/primutilities": "0.5.*",
     "robmorgan/phinx": "^0.6.4"
   },
   "config": {
