--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require": {
     "php": ">=7.0.0",
     "jarzon/prim": "~0.12.0",
-    "jarzon/forms": "~0.1.0",
+    "jarzon/form": "~1.3.0",
     "robmorgan/phinx": "^0.6.4"
   },
   "config": {
