--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "php": ">=7.0.0",
     "jarzon/prim": "~0.12.0",
     "jarzon/form": "~1.3.0",
-    "robmorgan/phinx": "^0.6.4",
+    "robmorgan/phinx": "0.*.*",
     "swiftmailer/swiftmailer": "~5.4"
   },
   "config": {
