--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
   "require": {
     "php": ">=7.0.0",
     "jarzon/prim": "~0.12.0",
-    "jarzon/form": "~1.3.0",
-    "robmorgan/phinx": "0.*.*",
-    "swiftmailer/swiftmailer": "~5.4"
+    "jarzon/form": ">=1.3.0",
+    "robmorgan/phinx": ">=0.9.0",
+    "swiftmailer/swiftmailer": ">=5.4.0"
   },
   "config": {
     "bin-dir": "bin"
