--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,18 @@
 {
   "name": "jarzon/userpack",
+  "description": "A basic user system for Prim",
   "type": "project",
   "autoload": {
     "psr-4": {"UserPack\\": "/"}
   },
-  "autoload-dev": {
-    "psr-4": {"Tests\\": "tests/"}
-  },
   "require": {
-    "php": ">=7.2.0",
-    "jarzon/prim": "~0.15.0",
+    "php": ">=7.4.0",
+    "jarzon/prim": "~0.16.0",
     "jarzon/form": ">=1.4.0",
     "robmorgan/phinx": ">=0.9.0",
     "swiftmailer/swiftmailer": ">=5.4.0"
   },
   "config": {
     "bin-dir": "bin"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "6.1.*",
-    "phpunit/dbunit": "3.0.*"
   }
 }
