--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "A basic user system for Prim",
   "type": "project",
   "autoload": {
-    "psr-4": {"UserPack\\": "/"}
+    "psr-4": {"UserPack\\": "./"}
   },
   "config": {
     "bin-dir": "bin"
@@ -14,5 +14,8 @@
     "jarzon/form": ">=1.4.0",
     "robmorgan/phinx": ">=0.9.0",
     "swiftmailer/swiftmailer": ">=5.4.0"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^0.11.0"
   }
 }
