--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "php": ">=7.4.0",
     "jarzon/prim": "~0.16.1",
     "jarzon/form": ">=1.4.0",
+    "jarzon/querybuilder": "~0.5.0",
     "robmorgan/phinx": ">=0.9.0",
     "swiftmailer/swiftmailer": ">=6.2.0"
   },
