--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "bin-dir": "bin"
   },
   "require": {
-    "php": ">=7.4.0",
-    "jarzon/prim": "~0.16.1",
-    "jarzon/form": ">=1.4.0",
+    "php": ">=8.0.0",
+    "jarzon/prim": "~0.17.0",
+    "jarzon/form": ">=1.8.0",
     "jarzon/querybuilder": "~0.6.0",
-    "robmorgan/phinx": ">=0.9.0",
+    "robmorgan/phinx": "~0.12.0",
     "swiftmailer/swiftmailer": ">=6.2.0"
   },
   "require-dev": {
