--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=8.0.0",
     "jarzon/prim": "~0.17.0",
     "jarzon/form": ">=1.8.0",
-    "jarzon/querybuilder": "~0.6.0",
+    "jarzon/querybuilder": ">=0.7.0",
     "robmorgan/phinx": "~0.12.0",
     "swiftmailer/swiftmailer": ">=6.2.0"
   },
