--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,5 +1,6 @@
 parameters:
     level: 5
+    checkMissingIterableValueType: false
     paths:
         - %currentWorkingDirectory%/
     excludes_analyse:
