Make phinx a soft dep

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "bin-dir": "bin"
   },
   "require": {
-    "php": ">=8.1.0",
+    "php": ">=8.2.0",
     "jarzon/prim": "~0.20.0",
     "jarzon/form": ">=1.8.0",
     "jarzon/querybuilder": ">=0.7.0",
-    "robmorgan/phinx": "~0.12.0",
+    "robmorgan/phinx": ">=0.15.0",
     "swiftmailer/swiftmailer": ">=6.2.0"
   },
   "require-dev": {
